# webmscore-webpack5

./: .appveyor_off.yml  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile.plugins  Makefile  README.md  all.h  config.cmake  msvc_build.bat  package.json  webmscore.cdn.mjs
.github/workflows/: ci_macos.yml
audio/: CMakeLists.txt
audio/exports/: exportmidi.cpp
audio/midi/: midi.cmake  msynthesizer.cpp
audio/midi/fluid/: fluid.cpp  fluid.h
audiofile/: audiofile.h
effects/: CMakeLists.txt  effect.h
effects/compressor/: compressor.h  compressorgui.cpp
effects/freeverb/: freeverb.h
effects/noeffect/: noeffect.cpp  noeffect.h
effects/zita1/: zita.h  zitagui.cpp
fluid/: CMakeLists.txt  fluid.cpp  fluid.h
fonts/: compact.sh
fonts/bravura/: bravura_metadata.json  metadata.json
fonts/gootville/: metadata.json
fonts/leland/: metadata.json
fonts/musejazz/: metadata.json
fonts/petaluma/: metadata.json  petaluma_metadata.json
importexport/midiimport/: importmidi.cpp
importexport/musicxml/: exportxml.cpp  importxml.cpp
libmscore/: CMakeLists.txt  chordlist.cpp  cmd.cpp  edit.cpp  element.cpp  element.h  exports.cpp  exports.h  exportsvg.cpp  exportxml.cpp  exportxml.h  figuredbass.cpp  icon.h  importexports.h  importxmlfirstpass.h  lyrics.cpp  lyrics.h  mscore.cpp  musescoreCore.h  musicxml.h  musicxmlfonthandler.cpp  musicxmlfonthandler.h  musicxmlsupport.cpp  musicxmlsupport.h  read206.cpp  rendermidi.cpp  score.cpp  score.h  scorefile.cpp  stafftype.cpp  style.cpp  svggenerator.cpp  sym.cpp  synthres.h  textbase.cpp  textbase.h  textedit.cpp  types.h  undo.cpp
mscore/: exportaudio.cpp  exportmidi.cpp  exportxml.cpp  file.cpp  file.h  preferences.cpp  preferences.h  savePositions.cpp  svggenerator.h
src/: helper.d.ts  index.d.ts
synthesizer/: CMakeLists.txt  msynthesizer.cpp
web/: CMakeLists.txt  main.cpp
web-example/: .gitignore  Aequale_No_1.mscz  benchmark.js  example.js  index.html  package.json
web-public/: .gitignore  global.d.ts  helper.js  index.js  metadata-schema.ts  nodejs_shim.js  package.json  rollup.config.js  schemas.ts
web-public/src/: helper.js  index.js  nodejs.js  nodejs_shim.js  utils.js  worker-helper.js  worker.js
